+ Fixing wrapping of sizes on product thumb hover state as well

--- a/assets/quick-add.css
+++ b/assets/quick-add.css
@@ -202,6 +202,7 @@
 
 .quick-add-variants__options {
   display: flex;
+  flex-wrap: wrap;
 }
 
 
